fix: CLS issue by adding explicit image dimensions to all img tags - add `img-size` partial to extract dimensions from local image resource - map page paths to local _images/ directory for size calculation - apply `maxImageSize` constraint to match scaled remote images - integrate dimension attributes in cover, thumbnail, markdown, and shortcode images

--- a/layouts/_markup/render-image.html
+++ b/layouts/_markup/render-image.html
@@ -2,8 +2,9 @@
 {{- if .Page.Site.Params.portableLinks -}}
   {{- $destination = partial "links/portable-image" . -}}
 {{- end -}}
+{{- $attrs := partial "content/img-attr" (dict "Page" .Page "Url" $destination) -}}
 <label class="md-image" for="md-image-toggle-{{ .Ordinal }}">
   <input class="hidden toggle" type="checkbox" id="md-image-toggle-{{ .Ordinal }}" />
-  <img src="{{ $destination | safeURL }}" alt="{{ .Text }}" {{ with .Title }}title="{{ . }}"{{ end }} loading="lazy" decoding="async" />
+  <img src="{{ $destination | safeURL }}" alt="{{ .Text }}" {{ with .Title }}title="{{ . }}"{{ end }} {{ $attrs | safeHTMLAttr }} loading="lazy" decoding="async" />
 </label>
 {{- /**/ -}}
