--- a/layouts/_partials/meta/seo/opengraph.html
+++ b/layouts/_partials/meta/seo/opengraph.html
@@ -6,7 +6,7 @@
 {{- with cond .Params.thumbnail .Params.thumbnail .Params.cover -}}
   <meta property="og:image" content="{{ . | absURL }}" />
 {{- else }}
-  {{- with $.Params.images -}}
+  {{- with $.Params.ogImages -}}
     {{- range first 6 . }}<meta property="og:image" content="{{ . | absURL }}" />{{ end -}}
   {{- else -}}
     {{- $images := $.Resources.ByType "image" -}}
@@ -15,7 +15,7 @@
     {{- with $featured -}}
       <meta property="og:image" content="{{ $featured.Permalink }}"/>
     {{- else -}}
-      {{- with .Site.Params.images }}<meta property="og:image" content="{{ index . 0 | absURL }}"/>{{ end -}}
+      {{- with .Site.Params.assets.opengraph }}<meta property="og:image" content="{{ . | absURL }}"/>{{ end -}}
     {{- end -}}
   {{- end -}}
 {{- end }}
