--- a/layouts/_partials/meta/seo/twitter_cards.html
+++ b/layouts/_partials/meta/seo/twitter_cards.html
@@ -2,7 +2,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:image" content="{{ . | absURL }}" />
 {{- else }}
-{{- with $.Params.images -}}
+{{- with $.Params.twitterCards -}}
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="{{ index . 0 | absURL }}"/>
 {{ else -}}
@@ -13,9 +13,9 @@
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="{{ $featured.Permalink }}"/>
 {{- else -}}
-{{- with site.Params.images -}}
+{{- with site.Params.assets.opengraph -}}
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="{{ index . 0 | absURL }}"/>
+<meta name="twitter:image" content="{{ . | absURL }}"/>
 {{ else -}}
 <meta name="twitter:card" content="summary"/>
 {{- end -}}
