--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,6 +5,8 @@
 @import "css/themes/auto";
 
 @import "css/main/normalize";
+@import "css/main/icon";
+
 @import "css/main/utils";
 @import "css/main/print";
 @import "css/main/markdown";
