--- a/layouts/_markup/render-codeblock.html
+++ b/layouts/_markup/render-codeblock.html
@@ -11,7 +11,7 @@
 <div class="sc-codeblock" data-lang="{{ .Type }}">
   <div class="code-actions">
     <button class="code-copy-button code-action" onclick="copyCode(this)">
-      <i class="fa-solid fa-copy"></i>Copy
+      <i class="icon-file-copy"></i>Copy
     </button>
     <span class="code-language code-action">{{ .Type | default "text" }}</span>
   </div>
