--- a/layouts/_partials/toolbar.html
+++ b/layouts/_partials/toolbar.html
@@ -2,7 +2,7 @@
 
 <div class="toolbar-items">
   <div class="toolbar-button i18n-button">
-    <i class="fa-solid fa-globe"></i>
+    <i class="icon-globe"></i>
     <select class="i18n-selector"
             id="i18n-selector"
             aria-label="i18n `toolbar.i18n.tooltip` | default `Select language`"
@@ -45,7 +45,7 @@
           title="i18n `toolbar.top.tooltip` | default `Go to top`"
           data-i18n-id="toolbar.top.tooltip"
           data-i18n-attrs="aria-label,title">
-    <i class="fa fa-chevron-up"></i>
+    <i class="icon-chevron-up"></i>
   </button>
 
   <button class="toolbar-button"
@@ -54,7 +54,7 @@
           title="i18n `toolbar.bottom.tooltip` | default `Go to bottom`"
           data-i18n-id="toolbar.bottom.tooltip"
           data-i18n-attrs="aria-label,title">
-    <i class="fa fa-chevron-down"></i>
+    <i class="icon-chevron-down"></i>
   </button>
 
   <button class="toolbar-button"
@@ -63,11 +63,11 @@
           title="i18n `toolbar.back.tooltip` | default `Go back`"
           data-i18n-id="toolbar.back.tooltip"
           data-i18n-attrs="aria-label,title">
-    <i class="fa-solid fa-arrow-left"></i>
+    <i class="icon-arrow-left"></i>
   </button>
 </div>
 
 <label for="toolbar-toggle" class="toolbar-button toolbar-toggle-label">
-  <i class="fa-solid fa-plus icon-expand"></i>
-  <i class="fa-solid fa-xmark icon-collapse"></i>
+  <i class="icon-plus icon-expand"></i>
+  <i class="icon-xmark icon-collapse"></i>
 </label>
