--- a/layouts/_shortcodes/data-table.html
+++ b/layouts/_shortcodes/data-table.html
@@ -33,7 +33,7 @@
             data-filename="{{ $fileName }}"
             data-delimiter="{{ $delimiter }}"
             onclick="downloadCSV(this)">
-      <i class="fa-solid fa-download"></i> {{ $fileName }}
+      <i class="icon-download"></i> {{ $fileName }}
     </button>
   </caption>
   {{- end -}}
