--- a/assets/css/_shortcodes.scss
+++ b/assets/css/_shortcodes.scss
@@ -725,6 +725,7 @@
           &:not(.disabled):hover {
             background-color: var(--color-link);
             color: var(--body-background);
+            text-decoration: none;
           }
 
           &.disabled {
