--- a/layouts/tags/terms.html
+++ b/layouts/tags/terms.html
@@ -18,7 +18,7 @@
 <article class="markdown content-wrap">
   <div class="list-header">
     <h1>
-      <i class="fa-solid fa-tags"></i>
+      <i class="icon-tags"></i>
       <span data-i18n-id="tags.terms.title" data-i18n-text>
         {{- i18n "tags.terms.title" | default "Tags" -}}
       </span>
