refactor: replace highlight.js CDN theme loading with embedded CSS variables

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,6 +3,7 @@
 @import "css/variables/fonts";
 
 @import "css/themes/auto";
+@import "css/variables/highlight";
 
 @import "css/main/normalize";
 @import "css/main/icon";
