update: optimize icon font display with swap and early preload for better UX

--- a/layouts/_partials/head.html
+++ b/layouts/_partials/head.html
@@ -49,6 +49,9 @@ https://github.com/minyeamer/hugo-miny
 
 <title>{{- partial "title" . -}}</title>
 
+<!-- Preload icon font for better CLS performance (placed early for faster loading) -->
+<link rel="preload" href="{{ `/fonts/icomoon.woff?jrhayr` | relURL }}" as="font" type="font/woff">
+
 {{- $manifest := resources.Get "data/manifest.json" | resources.ExecuteAsTemplate "data/manifest.json" . }}
 <link rel="manifest" href="{{ $manifest.RelPermalink }}">
 <link rel="canonical" href="{{ if .Params.canonicalURL -}} {{ trim .Params.canonicalURL ` ` }} {{- else -}} {{ .Permalink }} {{- end }}">
