update: allow multiple headers to data-table shortcode

--- a/assets/css/_shortcodes.scss
+++ b/assets/css/_shortcodes.scss
@@ -374,7 +374,7 @@
     background: transparent;
     overflow-x: auto;
 
-    thead {
+    thead tr {
       background-color: var(--data-thead-color);
       font-weight: 700;
       position: sticky;
