--- a/layouts/_partials/footer/prev-next.html
+++ b/layouts/_partials/footer/prev-next.html
@@ -73,7 +73,7 @@
       {{- i18n "post.prev.link" | default "PREV" -}}
     </span>
   </span>
-  <span class="prev-next-title">
+  <span class="prev-next-title" data-i18n-id="post.prev.empty" data-i18n-text>
     {{- i18n "post.prev.empty" | default "No previous post" -}}
   </span>
 </a>
@@ -97,7 +97,7 @@
     </span>
     <i class="icon-forward"></i>
   </span>
-  <span class="prev-next-title">
+  <span class="prev-next-title" data-i18n-id="post.next.empty" data-i18n-text>
     {{- i18n "No next post" | default "No next post" -}}
   </span>
 </a>
